grammar.js
        source_file: ($) => repeat(seq($._instruction, "\n")),

        _instruction: ($) =>
            choice(
                $.from_instruction,
                $.run_instruction,
                $.cmd_instruction,
                $.label_instruction,
                $.expose_instruction,
                $.env_instruction,
                $.add_instruction,
                $.copy_instruction,
                $.entrypoint_instruction,
                $.volume_instruction,
                $.user_instruction,
                $.workdir_instruction,
                $.arg_instruction,
                $.onbuild_instruction,
                $.stopsignal_instruction,
                $.healthcheck_instruction,
                $.shell_instruction,
                $.maintainer_instruction,
                $.cross_build_instruction,
            ),

        env_instruction: ($) =>
            seq(
                alias(/[eE][nN][vV]/, "ENV"),
                choice(repeat1($.env_pair), alias($._spaced_env_pair, $.env_pair))
            ),

        copy_instruction: ($) =>
            seq(
                alias(/[cC][oO][pP][yY]/, "COPY"),
                repeat($.param),
                repeat1(
                    seq(alias($.path_with_heredoc, $.path), $._non_newline_whitespace)
                ),
                alias($.path_with_heredoc, $.path),
                repeat($.heredoc_block)
            ),

        arg_instruction: ($) =>
            seq(
                alias(/[aA][rR][gG]/, "ARG"),
                repeat1(
                    seq(field("name", alias(/[a-zA-Z0-9_]+/, $.unquoted_string)),
                        optional(
                            seq(
                                token.immediate("="),
                                field("default",
                                    choice(
                                        $.double_quoted_string,
                                        $.single_quoted_string,
                                        $.unquoted_string
                                    ))
                            )
                        )
                    )
                )
            ),

        path: ($) =>
            seq(
                choice(
                    /[^-\s\$<]/, // cannot start with a '-' to avoid conflicts with params
                    /<[^<]/, // cannot start with a '<<' to avoid conflicts with heredocs (a single < is fine, though)
                    $.expansion
                ),
                repeat(choice(token.immediate(/[^\s\$]+/), $._immediate_expansion))
            ),

        _immediate_expansion: $ => alias($._imm_expansion, $.expansion),
        env_pair: ($) =>
            seq(
                field("name", $._env_key),
                token.immediate("="),
                optional(
                    field("value",
                        choice(
                            $.double_quoted_string,
                            $.single_quoted_string,
                            $.unquoted_string
                        ))
                )
            ),

        _spaced_env_pair: ($) =>
            seq(
                field("name", $._env_key),
                token.immediate(/\s+/),
                field("value",
                    choice(
                        $.double_quoted_string,
                        $.single_quoted_string,
                        $.unquoted_string
                    ))
            ),

        _env_key: ($) =>
            alias(/[a-zA-Z_][a-zA-Z0-9_]*/, $.unquoted_string),

        param: () =>
            seq(
                "--",
                field("name", token.immediate(/[a-z][-a-z]*/)),
                optional(
                    seq(
                        token.immediate("="),
                        field("value", token.immediate(/[^\s]+/)))
                )
            ),

        // Specific parsing of the --mount option e.g.
        //
        //   --mount=type=cache,target=/root/.cache/go-build
        //
        line_continuation: () => /\\[ \t]*\n/,
        double_quoted_string: ($) =>
            seq(
                '"',
                repeat(
                    choice(
                        token.immediate(/[^"\n\\\$]+/),
                        alias($.double_quoted_escape_sequence, $.escape_sequence),
                        "\\",
                        $._immediate_expansion
                    )
                ),
                '"'
            ),

        // same as double_quoted_string but without $-expansions:
        unquoted_string: ($) =>
            repeat1(
                choice(
                    token.immediate(/[^\s\n\"'\\\$]+/),
                    token.immediate("\\ "),
                    $._immediate_expansion
                )
            ),

        _non_newline_whitespace: () => token.immediate(/[\t ]+/),

        comment: () => /#.*(\r?\n)?/,
    },
});
